fixed whitespace from center div

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #e7f8ff;
 }
 
 .App-logo {
@@ -30,6 +31,11 @@
 
 .background-blue{
   background-color: #e7f8ff;
+}
+
+.main-div{
+  height: 100vh;
+  width: 100vw;
 }
 
 .me-4{
